# path_checker

./: README.md  setup.cfg
.github/workflows/: tests.yml
path_checker/: ltl_nodes.py
path_checker/tests/: test_path_checker.py
