[metadata]
name = path_checker
version = 1.0.0
description = Check network paths using temporal logic and model checking
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin M. Gyori
author_email = benjamin_gyori@hms.harvard.edu
url = https://github.com/bgyori/path_checker
license_file = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only


[options]
install_requires =
    indra @ git+https://github.com/sorgerlab/indra.git
    paths_graph

include_package_data = True
python_requires = >=3.6

[options.extras_require]
tests =
    nose
    coverage

